   * Show warning when saving DCinema formats in non-utf-8
   * Improve "Import plain text" for small resolutions - thx doquan0
   * Improve end-color-font-tag for EBU 3+ lines
   * Update Finnish spell check to libvoikko 4.3 (2019-11-24)
   * Finnish spell check should now also work on Linux - thx Gitraffe
   * Allow higher (1000) max margin for SSA/ASS thx Looi
* FIXED:
   * Fix for overlap in "Tools -> Adjust durations" - thx Christian
   * Fix bug in EBU STL ms to frames - thx Lucius Snow
   * Fix some shortcuts being written to text box - thx rebawest
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix syntax coloring after replace - thx OmrSi
   * Fix minor label issue at startup - thx Bill
   * Fix crash on very very long text lines
   * Fix bug in export multi-line-bold/box-for-each-line - thx thehulk
   * Fix bug in export text with font-size - thx thehulk
   * Fix shortcut validation for a few menu items - thx LiMa79#4271
   * Fix web color to hex color in DCinema - thx Antonio
   * Ignore comments (NOTE) in VTT - thx Issity 
   * Fix for TTML short time code - thx Aylen
   * Fix bug in split with continuation style / Arabic - thx OmrSi


3.5.16 (16th June 2020)
* NEW:
   * OCR method "nOCR" (vector based with auto training) - thx Janusz
   * Enable custom color for waveform cursor
   * New shortcuts to move start/end one frame
   * New shortcuts to move start/end with gap - thx matmaggi/Fhining/btsix
   * Add move shortcuts to waveform (arrow left/right) - thx Shaddy
   * Add shortcut for "add waveform" - thx Bill
   * Add shortcuts for "go to prev/next sub and play"
   * Add new subtitle format - thx Matmanamane
   * Add new subtitle format "Speechmatics" - thx Rene
   * Add new json sub formats - thx Steven
   * Add new sub format - thx Luke
   * Add new formats - thx Hai-Lag 
   * Add Bulgarian no-break-after-list - thx Eva
   * Add "More than two lines" to "Modify selection"
   * Settings: Small helper window to calc gap in frames